Send command to Protocol Channel in a blocking way